# ml-exploration

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
notebooks/: 1. Linear Regression.ipynb  2. Logistic Regression.ipynb  3. Tree-Based Models.ipynb
scripts/: format.sh  lint.sh
