[tool.poetry]
authors = ["Andrii Sherman <andriisherman@gmail.com>"]
description = ""
name = "ML Exploration"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "^20.8b1"
data-science-types = "*"
isort = "^5.7.0"
jupyter = "*"
mypy = "*"
pre-commit = "*"
pylint = "^2.6.0"
pytest = "*"
pytest-cov = "*"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
