[tool.poetry]
authors = ["Andrii Sherman <andriisherman@gmail.com>"]
description = ""
name = "ML Exploration"
version = "0.1.0"

[tool.poetry.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.0.14"
numpy = "^1.20.2"
pandas = "^1.2.4"
python = "^3.8"
scikit-learn = "^0.24.1"
xgboost = "^1.4.1"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "^20.8b1"
data-science-types = "*"
isort = "^5.7.0"
mypy = "*"
pre-commit = "*"
pylint = "^2.6.0"
pytest = "*"
pytest-cov = "*"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
